changes to index

--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
     <div class="corner-text" id="bottomleft">
       <img src="sprites/about/cc0.png" height="30" style="opacity:0.7" />
       <br />
-      Sei libero di ri-usare e fare un &amp; remix di questo gioco per qualsiasi
+      Sei libero di ri-usare e fare un remix di questo gioco per qualsiasi
       uso!
       <a href="https://github.com/ncase/anxiety#public-domain" target="_blank"
-        >(huh?)</a
+        >(che?)</a
       >
       <br />
-      <a href="https://github.com/ncase/anxiety" target="_blank">Codice</a>
+      <a href="https://github.com/ncase/anxiety" target="_blank">Link al Codice</a>
     </div>
 
     <div class="corner-text" id="topright">
@@ -321,12 +321,12 @@
       </div>
       <br />
       Per il tuo piacere di condividere:<br />
-      <a href="sharing" target="_blank">Videos &amp; Thumbnails</a>
+      <a href="sharing" target="_blank">Video &amp; immagini</a>
     </div>
 
     <div class="corner-text" id="bottomright">
       <a href="https://ncase.me/mental-health/" target="_blank"
-        >Consigli sulla salute mentale &amp; risorse (in inglese)</a
+        >Consigli sulla salute mentale &amp; risorse utili (in inglese)</a
       >
       <span class="hide-if-cuss-free">
         <br /><br />
