immagini credits + index + ui
tradotte le immagini dei credits
+ modificate alcune cose in index
+ tradotta immagine in ui sulle etichette degli attacchi

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <!-- THE BIG META -->
-    <title>Adventures With Anxiety!</title>
+    <title>Avventure Con Ansia!</title>
     <!-- TRANSLATE -->
     <meta
       name="description"
-      content="A story-game about a human and their anxiety. You play as the anxiety."
+      content="Una storia-giocabile su di un umano e la sua ansia. Tu sei l'ansia."
     />
     <!-- TRANSLATE: content -->
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -14,11 +14,11 @@
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ncasenmare" />
-    <meta name="twitter:title" content="Adventures With Anxiety!" />
+    <meta name="twitter:title" content="Avventure Con Ansia!" />
     <!-- TRANSLATE: content -->
     <meta
       name="twitter:description"
-      content="A story-game about a human and their anxiety. You play as the anxiety."
+      content="Una storia-giocabile su di un umano e la sua ansia. Tu sei l'ansia."
     />
     <!-- TRANSLATE: content -->
     <meta
@@ -27,7 +27,7 @@
     />
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Adventures With Anxiety!" />
+    <meta property="og:title" content="Avventure Con Ansia!" />
     <!-- TRANSLATE: content -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ncase.me/anxiety/" />
@@ -37,10 +37,10 @@
     />
     <meta
       property="og:description"
-      content="A story-game about a human and their anxiety. You play as the anxiety."
+      content="Una storia-giocabile su di un umano e la sua ansia. Tu sei l'ansia."
     />
     <!-- TRANSLATE: content -->
-    <meta property="og:site_name" content="Adventures With Anxiety!" />
+    <meta property="og:site_name" content="Avventure Con Ansia!" />
     <!-- TRANSLATE: content -->
 
     <!-- Styles -->
@@ -151,10 +151,10 @@
         <div id="about_words">
           <!-- TRANSLATE THIS -->
           <div style="font-size: 40px; margin-top: 42px; line-height: 30px;">
-            mental health
             <a href="https://ncase.me/mental-health/" target="_blank"
               >risorse</a
             >
+			sulla salute mentale
           </div>
 
           <div style="margin-top: 26px; color: #999;">
@@ -167,11 +167,11 @@
           >
             <!-- TRANSLATE ALL THIS -->
             <div>
-              play more of
-              <a href="https://ncase.me" target="_blank">la mia roba</a>
+              gioca con altra
+              <a href="https://ncase.me" target="_blank">roba mia</a>
             </div>
             <div style="margin-top: 32px;">
-              throw coins<br />at me
+              lanciami<br />soldi 
               <a href="https://www.patreon.com/ncase" target="_blank"
                 >su Patreon</a
               >
@@ -194,7 +194,7 @@
             id="close_about"
             style="margin: 0; float: right; margin-top: 20px;"
           >
-            close
+            chiudi
           </div>
           <!-- TRANSLATE -->
         </div>
@@ -215,8 +215,8 @@
         </div>
         <div style="float: right; width: 135px; height: 63px;">
           <!-- TRANSLATE THIS -->
-          And advance
-          <div id="text_automatic_toggle">on click</div>
+          E avanza
+          <div id="text_automatic_toggle">al click</div>
         </div>
         <div style="clear:both"></div>
         <span id="volume_options">
@@ -264,7 +264,7 @@
       Musica di
       <a href="https://loyaltyfreakmusic.com" target="_blank">Monplaisir</a>
       <br />
-      Extra codice di
+      Codice extra di
       <a href="https://spacie.me/" target="_blank">Spacie</a>
       <br />
       <a href="https://github.com/ncase/anxiety#full-credits" target="_blank"
