--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             click o barra spaziatrice
           </span>
           <span id="instructions_if_mobile" style="display:none">
-            fai tap ovunque
+            tocca ovunque
           </span>
         </span>
         <span id="cta_text2">
@@ -215,8 +215,8 @@
         </div>
         <div style="float: right; width: 135px; height: 63px;">
           <!-- TRANSLATE THIS -->
-          E avanza
-          <div id="text_automatic_toggle">al click</div>
+          E avanza in
+          <div id="text_automatic_toggle">un click</div>
         </div>
         <div style="clear:both"></div>
         <span id="volume_options">
