--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
           divertimento!
         </p>
         <p style="color:#999; font-size: 16px; line-height: 1.3em;">
-          altre note: abuso d'alcohol, scene di sesso<span
+          altre note: abuso d'alcohol, sessualità<span
             class="hide-if-cuss-free"
-            >, e @✩$!tante parolacce</span
+            >, e @✩$!✩$mente tante parolacce</span
           >
         </p>
         <p>
@@ -153,8 +153,8 @@
           <div style="font-size: 40px; margin-top: 42px; line-height: 30px;">
             <a href="https://ncase.me/mental-health/" target="_blank"
               >risorse</a
-            >
-			sulla salute mentale
+            ><br />
+			sulla salute <br /> mentale
           </div>
 
           <div style="margin-top: 26px; color: #999;">
@@ -264,7 +264,7 @@
       Musica di
       <a href="https://loyaltyfreakmusic.com" target="_blank">Monplaisir</a>
       <br />
-      Codice extra di
+      Codice aggiuntivo di
       <a href="https://spacie.me/" target="_blank">Spacie</a>
       <br />
       <a href="https://github.com/ncase/anxiety#full-credits" target="_blank"
@@ -285,7 +285,7 @@
     </div>
 
     <div class="corner-text" id="topright">
-      Condividi su un'app portatrice d'ansia:
+      Condividi su un'app ansiogena:
       <span id="sharing_title">
         Avventure Con l'Ansia!
       </span>
