--- a/index.html
+++ b/index.html
@@ -150,20 +150,20 @@
         <!-- about=yes-->
         <div id="about_words">
           <!-- TRANSLATE THIS -->
-          <div style="font-size: 40px; margin-top: 42px; line-height: 30px;">
+          <div style="font-size: 40px; margin-top: 32px; line-height: 37px;">
             <a href="https://ncase.me/mental-health/" target="_blank"
               >risorse</a
             ><br />
-			sulla salute <br /> mentale
+			sulla salute mentale
           </div>
 
-          <div style="margin-top: 26px; color: #999;">
-            &mdash; or &mdash;
+          <div style="color: #999;">
+            &mdash; o &mdash;
           </div>
 
           <div
             style="font-size: 25px; text-align: left; width: 170px;
-						margin-left: 165px; line-height: 25px; margin-top: 31px;"
+						margin-left: 165px; line-height: 25px; margin-top: 12px;"
           >
             <!-- TRANSLATE ALL THIS -->
             <div>
@@ -176,8 +176,8 @@
                 >su Patreon</a
               >
             </div>
-            <div style="margin-top: 28px;">
-              date piacere ai vostri fori auditivi con la
+            <div style="margin-top: 20px; margin-right: 2px;">
+              date piacere alle vostre orecchie con la
               <a
                 href="https://chezmonplaisir.bandcamp.com/album/anxiety"
                 target="_blank"
@@ -192,7 +192,7 @@
           <div style="clear:both;"></div>
           <div
             id="close_about"
-            style="margin: 0; float: right; margin-top: 20px;"
+            style="margin: 0; float: right; margin-top: 16px;"
           >
             chiudi
           </div>
